--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>TT DBS Prediction Model</h1>
+        <h1>DBS Prediction Model</h1>
         <form action="/" method="post">
             <p>Please enter USD to SGD rates (eg 1.4)</p>
             <p><input type="number" step="0.01" name="rates"></p>
